<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pollub53.pl.aplikacja2tk.EditPhoneActivity"
    tools:showIn="@layout/activity_edit_phone">

    <TextView
        android:id="@+id/brandEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_brand_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_alignBaseline="@+id/brandEdit"
        android:layout_alignBottom="@+id/brandEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/brandEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/brandEditLabel"
        android:layout_toEndOf="@+id/brandEditLabel" />

    <TextView
        android:id="@+id/modelEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_model_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_alignBaseline="@+id/modelEdit"
        android:layout_alignBottom="@+id/modelEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/modelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/brandEdit"
        android:layout_toRightOf="@+id/brandEditLabel"
        android:layout_toEndOf="@+id/brandEditLabel" />

    <TextView
        android:id="@+id/androidEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_android_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_alignBaseline="@+id/androidEdit"
        android:layout_alignBottom="@+id/androidEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/androidEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modelEdit"
        android:layout_toEndOf="@+id/androidEditLabel"
        android:layout_toRightOf="@+id/androidEditLabel"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/wwwEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_www_label"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_alignBaseline="@+id/wwwEdit"
        android:layout_alignBottom="@+id/wwwEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/wwwEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/androidEdit"
        android:layout_toEndOf="@+id/wwwEditLabel"
        android:layout_toRightOf="@+id/wwwEditLabel"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save_button"
        android:layout_below="@+id/wwwEdit"
        android:layout_alignRight="@+id/wwwEdit"
        android:layout_alignEnd="@+id/wwwEdit" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_alignBaseline="@+id/saveButton"
        android:layout_alignBottom="@+id/saveButton"
        android:layout_alignLeft="@+id/wwwEdit"
        android:layout_alignStart="@+id/wwwEdit" />
</RelativeLayout>
